--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ script:
   - bundle install --jobs=3 --retry=3
   - bundle exec rake spec
   - cd rubymotion
-  - bundle install --jobs=3 --retry=3
+  - pwd
+  - bundle install --gemfile=./Gemfile --jobs=3 --retry=3
   - bundle exec rake clean
   - bundle exec rake spec
