attempt travis build again

--- a/rubymotion/Rakefile
+++ b/rubymotion/Rakefile
@@ -10,6 +10,7 @@ require 'rubygems'
 begin
   require 'bundler'
   testing ? Bundler.require(:default, :spec) : Bundler.require
+  require 'bacon-expect' if testing
 rescue LoadError
 end
 
