enable dependency detection for RM

--- a/rubymotion/Rakefile
+++ b/rubymotion/Rakefile
@@ -1,4 +1,3 @@
-# -*- coding: utf-8 -*-
 $:.unshift("/Library/RubyMotion/lib")
 
 platform = ENV.fetch('platform', 'osx')
@@ -18,5 +17,6 @@ require 'bacon-expect' if testing
 Motion::Project::App.setup do |app|
   app.name        = 'motion-markdown-it'
   app.identifier  = 'com.motion-gemtest.motion-markdown-it'
-  # app.detect_dependencies = false
+
+  app.detect_dependencies = true
 end
