Optimize travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,38 @@
 # test against both regular Ruby and RubyMotion
-language: objective-c
+language: ruby
+cache:
+  - bundler
+
+# latest stable/supported versions
 rvm:
-  - 2.4.3
+  - 2.4.6
+  - 2.5.5
+  - 2.6.3
+
 before_install:
   - (ruby --version)
-  # - sudo chown -R travis ~/Library/RubyMotion
-  # - sudo mkdir -p ~/Library/RubyMotion/build
-  # - sudo chown -R travis ~/Library/RubyMotion/build
-  # - sudo motion update
+
 script:
   - bundle install --jobs=3 --retry=3
   - bundle exec rake spec
-  # - cd rubymotion
-  # - bundle install --gemfile=./Gemfile --jobs=3 --retry=3
-  # - bundle exec rake clean
-  # - bundle exec rake spec
+
+jobs:
+  include:
+    - stage: rubymotion
+      os: osx
+      osx_image: xcode9.1
+      language: objective-c
+      rvm: 2.4.2  # pre-installed in image
+      cache:
+        - bundler
+        - cocoapods
+      script:
+        - sudo chown -R travis ~/Library/RubyMotion
+        - sudo mkdir -p ~/Library/RubyMotion/build
+        - sudo chown -R travis ~/Library/RubyMotion/build
+        - sudo motion update
+        - sudo motion repo
+        - cd rubymotion
+        - bundle install --gemfile=./Gemfile --jobs=3 --retry=3
+        - bundle exec rake clean
+        - bundle exec rake spec
