--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,10 @@ rvm:
 before_install:
   - (ruby --version)
 
+gemfile:
+  - Gemfile
+
 script:
-  - bundle install --jobs=3 --retry=3
   - bundle exec rake spec
 
 jobs:
@@ -25,8 +27,6 @@ jobs:
       rvm: 2.4.2  # pre-installed in image
       cache:
         bundler: false
-      gemfile:
-        - Gemfile
       script:
         - wget http://travisci.rubymotion.com/ -O RubyMotion-TravisCI.pkg
         - sudo installer -pkg RubyMotion-TravisCI.pkg -target /
@@ -37,4 +37,5 @@ jobs:
         - eval "sudo motion activate $RUBYMOTION_LICENSE"
         - sudo motion update && motion repo
         - cd rubymotion
+        - bundle install --gemfile=./Gemfile --jobs=3 --retry=3
         - bundle exec rake spec
