--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,8 @@ rvm:
 before_install:
   - (ruby --version)
 
-gemfile:
-  - Gemfile
-
 script:
+  - bundle install --jobs=3 --retry=3
   - bundle exec rake spec
 
 jobs:
@@ -24,6 +22,7 @@ jobs:
       os: osx
       osx_image: xcode10.2
       language: objective-c
+      rvm: 2.4.5  # pre-installed in image
       cache:
         bundler: false
       script:
