--- a/rubymotion/Rakefile
+++ b/rubymotion/Rakefile
@@ -1,4 +1,6 @@
-$:.unshift("/Library/RubyMotion/lib")
+# -*- coding: utf-8 -*-
+$:.unshift('/Library/RubyMotion/lib')
+$:.unshift('~/.rubymotion/rubymotion-templates')
 
 platform = ENV.fetch('platform', 'osx')
 testing  = true if ARGV.join(' ') =~ /spec/
@@ -12,11 +14,18 @@ begin
 rescue LoadError
 end
 
-require 'bacon-expect' if testing
+require 'motion-expect' if testing
 
 Motion::Project::App.setup do |app|
   app.name        = 'motion-markdown-it'
   app.identifier  = 'com.motion-gemtest.motion-markdown-it'
+
+  if platform == 'ios'
+    # must set to the maximum SDK that the open source license supports,
+    # which is the latest non-beta
+    app.sdk_version           = '13.5'
+    app.deployment_target     = '13.5'
+  end
 
   app.detect_dependencies = true
 end
