Use motion_setup in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,21 +21,9 @@ jobs:
         - OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
       cache:
         bundler: false
+      install:
+        - ./.travis/motion_setup.sh
       script:
-        - brew update
-        - brew outdated xctool || brew upgrade xctool
-        - (xcrun simctl list)
-        - wget http://travisci.rubymotion.com/ -O RubyMotion-TravisCI.pkg
-        - sudo installer -pkg RubyMotion-TravisCI.pkg -target /
-        - cp -r /usr/lib/swift/*.dylib /Applications/Xcode.app/Contents/Frameworks/
-        - touch /Applications/Xcode.app/Contents/Frameworks/.swift-5-staged
-        - sudo mkdir -p ~/Library/RubyMotion/build
-        - sudo chown -R travis ~/Library/RubyMotion
-        - eval "sudo motion activate $RUBYMOTION_LICENSE"
-        - sudo motion update
-        - (motion --version)
-        - (ruby --version)
-        - motion repo
         - cd rubymotion
         - bundle install --gemfile=./Gemfile --jobs=3 --retry=3
         - bundle exec rake spec
