--- a/rubymotion/Gemfile
+++ b/rubymotion/Gemfile
@@ -1,5 +1,11 @@
+# frozen_string_literal: true
+
 source 'https://rubygems.org'
+gemspec path: '..'
 
 gem 'rake'
+gem 'pry-byebug'
 
-gemspec path: '..'
+group :spec do
+  gem 'motion-expect'
+end
